--- a/css/user/index/header.less
+++ b/css/user/index/header.less
@@ -19,7 +19,7 @@
 	padding-left:52px + 10px;
 	.u-avt{
 		.db;.pa;.lt(0,0);
-		.size(48px);.r(48px);padding:2px;background-color:#fff;border:1px solid #ddd;
+		.size(48px);.r(48px);padding:2px;background-color:#fafafa;border:1px solid #eee;
 		img{.db;.full;.r(48px);}
 		&.null{
 			background:url('@{url}common/anonymous.png') no-repeat center center;
@@ -119,15 +119,15 @@
 		//a:hover{text-decoration:underline;}
 
 		.u-viplink{
-			background-color:#f00;
+			background-color:#e60000;
 			&:hover{
-				background-color:lighten(#f00,12%);
+				background-color:lighten(#e60000,5%);
 			}
 		}
 		.u-code{
-			background-color:@basecolor;
+			background-color:#006acd;
 			&:hover{
-				background-color:lighten(@basecolor,5%);
+				background-color:lighten(#006acd,5%);
 			}
 		}
 
@@ -139,7 +139,7 @@
 	padding-top:0;
 	background-color:#f7f7f7;
 	.user-os-active{.none;}
-	.user-os-header{padding:0;background-color:#fff;margin-bottom:20px;}
+	.user-os-header{padding:0;background-color:#fff;margin-bottom:12px;}
 
 	.user-os-profile{padding:10px;border-bottom:1px solid #ddd;}
 	.user-os-avt .u-avt{.lt(10px);}
