--- a/css/user/index/nav.less
+++ b/css/user/index/nav.less
@@ -2,7 +2,7 @@
 	.none;
 	
 	background-color:#fff;
-	margin-bottom:20px;
+	margin-bottom:12px;
 	border-top:1px solid #ddd;
 	border-bottom:1px solid #ddd;
 
@@ -13,21 +13,21 @@
 	}
 	a{
 		.db;
-		.lh(24px);padding:12px 10px;
+		.fzlh(13px,24px);padding:10px 10px;
 		.pr;
 	}
 	em{
 		background-color:#f00;color:#fff;.x;
-		@size:20px;
-		.size(@size);.r(@size);
-		.fz(12px,@size);
-		.ct(y,@size);right:10px;
+		.w(18px);.r(2px);
+		.fz(12px,14px);
+		.ct(y,14px);right:10px;
+		padding:0 2px;
 		.none;
 	}
 	i{
-		.size(24px);.dbi;.y;margin-right:10px;
+		.size(18px);.dbi;.y;margin-right:10px;margin-top:-3px;
 		background-repeat:no-repeat;
-		background-position: center center;
+		background-position:center center;
 	}
 	.u-msg{
 		background-image:url('@{url}user/msg.svg');
@@ -44,6 +44,31 @@
 	.u-feed{
 		background-image:url('@{url}user/feed.svg');
 		background-size:auto 90%;
+	}
+	.u-space{
+		background-image:url('@{url}user/space.svg');
+		background-size:auto 100%;
+	}
+	.u-profile{
+		background-image:url('@{url}user/settings.svg');
+		background-size:100% auto;
+	}
+
+	.u-buy{
+		background-image:url('@{url}user/buy.svg');
+		background-size:auto 100%;
+	}
+	.u-vip{
+		background-image:url('@{url}user/vip.svg');
+		background-size:auto 100%;
+	}
+	.u-code{
+		background-image:url('@{url}user/code.svg');
+		background-size:auto 100%;
+	}
+	.u-gift{
+		background-image:url('@{url}user/gift.svg');
+		background-size:auto 100%;
 	}
 
 }
