--- a/css/user/msg/msg.less
+++ b/css/user/msg/msg.less
@@ -52,6 +52,14 @@
 		.table(block);
 		padding:0 10px;
 	}
+}
 
+.ua-responsive .screen-s{
+	.subtb{
+		background-color:#fafafa;
+	}
 
+	.nts{
+		padding:0 10px;
+	}
 }
