--- a/css/user/profile/profile.less
+++ b/css/user/profile/profile.less
@@ -26,6 +26,9 @@
 	.tbms{.none;}
 }
 .ua-responsive .screen-s{
+	/*.user-content{
+		padding:10px;
+	}*/
 	.bbda.pbm.mbm{
 		padding:5px  10px 0 10px;
 	}
