--- a/css/user/setting/setting.css
+++ b/css/user/setting/setting.css
@@ -1,1 +1,1 @@
-.ua-responsive .screen-s .mn{padding:10px}
+.ua-responsive .screen-s form{padding:10px}.ua-responsive .screen-s .tfm caption{display:block}
