--- a/css/user/space/follow.less
+++ b/css/user/space/follow.less
@@ -122,4 +122,12 @@
     	.none;
 	}
 
+	.flw_more{
+		.db;.x;
+		border-top:1px solid @blue-bo;
+		border-bottom:1px solid @blue-bo;
+		background-color:@blue-bg;
+		margin-top:10px;
+	}
+
 }
