--- a/template/about/portal/portal_topic_about.htm
+++ b/template/about/portal/portal_topic_about.htm
@@ -70,7 +70,12 @@
 							<li>
 								<strong>2015-07-05</strong><i></i>
 								<a href="javascript:void(0)">正式更名剑网3精品资料站</a>
-								<span>网站第六版改版上线，诸多开发正在进行中。</span>
+								<span>网站第六版改版上线，添加移动端适配，新成员PaPaGhost、LT等加入开发团队。</span>
+							</li>
+							<li>
+								<strong>2016-11-02</strong><i></i>
+								<a href="javascript:void(0)">JX3PVEOS项目启动</a>
+								<span>启动JX3PVEOS官方工具集项目，新成员wsy、戏北辰、wbflike、ShadowLi等加入开发团队。</span>
 							</li>
 						</ul>
 					</div>
