--- a/template/yylmacro/home/首页/os_header.htm
+++ b/template/yylmacro/home/首页/os_header.htm
@@ -16,7 +16,7 @@
 		 					<a href="./vip" class="e-vip e-vip-false"></a>
 		 				<!--{/if}-->
 		 				<a class="u-group" href="./home.php?mod=spacecp&ac=usergroup">$_G[group][grouptitle]</a>
-		 				<a class="u-logout" href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout}</a>
+		 				<!-- <a class="u-logout" href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout}</a> -->
 		 			</div>
 		 			<div class="u-meta-2">
 		 				<span class="u-uid">
