--- a/template/yylmacro/home/首页/space_home.htm
+++ b/template/yylmacro/home/首页/space_home.htm
@@ -251,5 +251,5 @@
 	}
 </script>
 <script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://test.jx3pve.com/js/user/index.min.js"></script>
+<script src="http://js.jx3pve.com/js/user/index.min.js"></script>
 <!--{template common/footer}-->
