--- a/template/yylmacro/home/首页/os_content.htm
+++ b/template/yylmacro/home/首页/os_content.htm
@@ -1,6 +1,25 @@
-<div class="user-os-content">
-	<h2 class="m-title">资料积分</h2>
-	<div class="m-list">
+<div class="user-os-content" id="user-os-content">
+
+	<ul class="user-os-setting-credit">
+		<li class="cre">
+			<label>金钱</label> 
+			<span><!--{echo getuserprofile('extcredits2');}--></span> 
+		</li>
+		<li class="cre">
+			<label>米币</label> 
+			<span><!--{echo getuserprofile('extcredits4');}--></span> 
+		</li>
+		<li class="cre">
+			<label>人气</label> 
+			<span><!--{echo getuserprofile('extcredits5');}--></span> 
+		</li>
+		<li class="cre">
+			<label>水晶</label> 
+			<span><!--{echo getuserprofile('extcredits8');}--></span> 
+		</li>
+	</ul>
+
+	<div class="user-os-nav">
 		<ul>
 			<li><a href="./home.php?mod=spacecp&ac=profile&op=password">修改密码</a></li>
 			<li><a href="./home.php?mod=spacecp&ac=plugin&op=profile&id=k_gaiming:k_gaiming">修改用户名</a></li>
@@ -8,25 +27,12 @@
 			<li><a href="./home.php?mod=spacecp&ac=profile&op=verify">申请认证</a></li>
 			<li><a href="./home.php?mod=spacecp&ac=plugin&id=qqconnect:spacecp">绑定QQ</a></li>
 			<li><a href="./home.php?mod=spacecp&ac=plugin&id=mpage_weibo:bind">绑定微博</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=credit&op=log">积分</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=credit&op=buy">充值</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=usergroup&do=list">开通会员</a></li>
-			<li><a href="./gift">积分兑换</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=invite">邀请码</a></li>
 		</ul>
 	</div>
-</div>
 
-<div class="user-os-content">
-	<h2 class="m-title">个人空间</h2>
-	<div class="m-list">
+	<div class="user-os-nav">
 		<ul>
-			<li><a href="./home.php?mod=space&do=profile">空间</a></li>
-			<li><a href="./home.php?mod=space&do=blog">日志</a></li>
-			<li><a href="./home.php?mod=space&do=album">相册</a></li>
-			<li><a href="./home.php?mod=space&do=share">分享</a></li>
-			<li><a href="./home.php?mod=space&do=doing">记录</a></li>
-			<li><a href="./home.php?mod=space&uid=1&do=wall&from=space">留言板</a></li>
+			<li><a href="./home.php?mod=spacecp&ac=credit&op=log">积分</a></li>
 			<li><a href="./home.php?mod=space&do=friend">好友</a></li>
 			<li><a href="./home.php?mod=task">任务</a></li>
 			<li><a href="./home.php?mod=medal">勋章</a></li>
@@ -36,4 +42,8 @@
 			<li><a href="./home.php?mod=spacecp&ac=privacy">隐私设置</a></li>
 		</ul>
 	</div>
+
+	<div class="user-os-content-back" id="user-os-content-back">返回</div>
+	
 </div>
+
