积分移动版优化

--- a/css/module/forum/sidebar/mobile.less
+++ b/css/module/forum/sidebar/mobile.less
@@ -1,8 +1,8 @@
 .ua-responsive .screen-s{
-	.i-header.showSidebar{
+	.i-header.showSidebar,.user-extend-menu{
 		.z(40);
 	}
-	.default-sidebar{
+	.default-sidebar,.user-extend-menu{
 		.none;
 		.w(100%);
 		.pf;left:0;top:@c-header-height;.z(40);
@@ -23,7 +23,7 @@
 	}
 }
 .alertHTML.ua-responsive .screen-s{
-	.default-sidebar{
+	.default-sidebar,.user-extend-menu{
 		top:@c-header-height + @c-alert-height;
 	}
 }
