--- a/css/system/faq.less
+++ b/css/system/faq.less
@@ -88,16 +88,17 @@
 	li{
 		color: #777;
 		margin-bottom:5px;
+		height:auto;
 	}
 	a{
 		.pr;
-		.fz(13px,40px);
-		padding-left:20px;
+		.fzlh(13px,28px);
+		padding-left:22px;
 		.db;
 	}
 	a:before {
 		content: '';
-		.db;.pa;.lt(0,13px);
+		.db;.pa;.lt(0,7px);
 		.size(15px);
 		background:url('@{url}header/icons2.png') no-repeat -215px -4px;
 	}
@@ -117,7 +118,7 @@
 	.z(40);
 	.w(100%);
 	background-color:#fff;
-	padding:10px 30px 20px 30px;
+	padding:10px 20px 20px;
 	border-bottom:1px solid #ddd;
 	box-sizing:border-box;
 }
