--- a/css/user/credit/buy.less
+++ b/css/user/credit/buy.less
@@ -7,6 +7,7 @@
 
 @import url('common.less');	
 
+
 //积分充值
 .buy-pc-primary{
 	.m-days label span{padding-top:30px;}
@@ -108,6 +109,12 @@
 		float:none;
 		.x(left);
 		margin:0;
+	}
+	.baseinfo{
+		.none;
+	}
+	.buy-pc-container{
+		padding-top:5px;
 	}
 }
 
