--- a/css/user/credit/gift.less
+++ b/css/user/credit/gift.less
@@ -117,8 +117,23 @@
 	}
 }
 .ua-responsive .screen-s{
+	.wp{
+		padding:0 10px !important;
+	}
 	.user-content{
 		padding:10px 0;
+	}
+	.m-gift-item{
+		float:none;
+		padding-bottom:10px;
+		border-bottom:1px dotted #ddd;
+		margin:0 0 10px 0;
+		.pr;padding-left:120px;
+
+		.u-screenshot{.pa;.lt(0,0);.size(100px);}
+		.u-meta{.x(left);}
+		.u-go{margin:0;}
+		
 	}
 }
 
