--- a/css/user/credit/vip.less
+++ b/css/user/credit/vip.less
@@ -39,7 +39,7 @@
 }
 
 .ua-responsive .screen-s{
-	.m-status .profile .rights{.none;}
+	//.m-status .profile .rights{.none;}
 	.vip-pc-details{padding:0 20px;background: none;}
 	.m-credit-primary .m-msg-true{
 		.ps;margin-left:0;
@@ -49,5 +49,8 @@
 	}
 	.m-credit-primary{
 		padding:0 10px;
+	}
+	.m-vip-rights{
+		.none;
 	}
 }
