--- a/template/yylmacro/home/积分/会员/vip_pc_extend.htm
+++ b/template/yylmacro/home/积分/会员/vip_pc_extend.htm
@@ -5,7 +5,7 @@
 </div>
 
 <!-- 会员权利 -->
-<div class="m-block block">
+<div class="m-block block m-vip-rights">
 	<h2 class="m-title vip-pc-title">全部特权<span>All VIP privileges &raquo;</span></h2>
 	<div class="vip-pc-details">
 		<!--{block/475}-->
