礼物的修订
Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/user/credit/gift.less
+++ b/css/user/credit/gift.less
@@ -133,7 +133,9 @@
 		.u-screenshot{.pa;.lt(0,0);.size(100px);}
 		.u-meta{.x(left);}
 		.u-go{margin:0;}
-		
+	}
+	.m-gift-record{
+		padding:10px;
 	}
 }
 
