个人中心-消息

--- a/css/module/common/i-header/all.less
+++ b/css/module/common/i-header/all.less
@@ -88,6 +88,18 @@
 		span{.none;}
 	}
 
+	//发消息
+	.u-msg{
+		.fl;
+		margin-top:4px;
+		margin-right:15px;
+		i{
+			.db;.size(40px);
+			background:~"url('@{url}user/send.svg') no-repeat 0 0 / auto 100%";
+		}
+		span{.none;}
+	}
+
 }
 
 .i-header{.none;}
