--- a/css/user/msg/msg.less
+++ b/css/user/msg/msg.less
@@ -21,15 +21,20 @@
 #showSelectBox{.none;}
 
 .ua-responsive .screen-s {
+	.tedt .pt{
+		.w(100%);
+	}
 	.user-msg-sendbutton{.none;}
 
 	.pm_c{
 		padding-left:0;
 		.xg1{.db;}
 	}
-	.pm_o{
-		float:none;
-		//.o{.none;}
+	.pm_o .o{
+		.fz(13px,2);color:#888;
+		.db;padding-left:22px;padding-right:5px;
+		background:url('@{url}user/settings.svg') no-repeat 4px center;
+		background-size:auto 60%;
 	}
 	.pml{
 		padding:5px 10px;
@@ -52,13 +57,9 @@
 		.table(block);
 		padding:0 10px;
 	}
-}
-
-.ua-responsive .screen-s{
 	.subtb{
 		background-color:#fafafa;
 	}
-
 	.nts{
 		padding:0 10px;
 	}
