--- a/source/plugin/luckypost/template/luckypost.htm
+++ b/source/plugin/luckypost/template/luckypost.htm
@@ -1,6 +1,6 @@
 <!--{template common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/bbs/lucky.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/user/extend/lucky.css" type="text/css" />
 <header class="i-header">
 	<a class="i-header-back" href="./home.php"><i></i></a>
 	<div class="i-header-title">际遇</div>
@@ -55,7 +55,7 @@
 								<ul id="thread_types" class="tb cl">
 									<li $opactives[list]><a href="plugin.php?id=luckypost">{lang luckypost:lucky_all_event}</a></li>
 									<li $opactives[my]><a href="plugin.php?id=luckypost&op=my">{lang luckypost:lucky_my_event}</a></li>
-									<li $opactives[stat]><a href="plugin.php?id=luckypost&ac=stat">{lang luckypost:lucky_rank}</a></li>
+									<!-- <li $opactives[stat]><a href="plugin.php?id=luckypost&ac=stat">{lang luckypost:lucky_rank}</a></li> -->
 								</ul>
 								<span class="y">
 									<p>$myfortune</p>
@@ -162,5 +162,4 @@
 	</div>
 </div>
 <script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/bbs.min.js"></script>
 <!--{subtemplate common/footer}-->
