--- a/template/yylmacro/home/3.资料/spacecp_profile.htm
+++ b/template/yylmacro/home/3.资料/spacecp_profile.htm
@@ -1,10 +1,5 @@
 <!--{template common/header_m}-->
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/profile/profile.css" type="text/css" />
-<header class="i-header">
-	<a class="i-header-back" href="./home.php"><i></i></a>
-	<div class="i-header-title">资料</div>
-</header>
+<!--{subtemplate home/iheader_profile}-->
 <div class="user-container">
 	<div class="wp">
 
@@ -331,6 +326,5 @@
 
 	</div>
 </div>
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/profile.min.js"></script>
+<!--{subtemplate home/ifooter_profile}-->
 <!--{template common/footer}-->
