--- a/template/yylmacro/home/4.积分/积分/spacecp_credit_base.htm
+++ b/template/yylmacro/home/4.积分/积分/spacecp_credit_base.htm
@@ -1,5 +1,5 @@
 <!--{template common/header_m}-->
-<!--{subtemplate home/buy_pc_iheader}-->
+<!--{subtemplate home/iheader_credit}-->
 	<div class="user-main">
 		<!--{subtemplate home/sidebar}-->
 		<div class="user-content">
@@ -46,5 +46,5 @@
 			</div>
 		</div>
 	</div>
-<!--{subtemplate home/buy_pc_footer}-->
+<!--{subtemplate home/ifooter_credit}-->
 <!--{template common/footer}-->
