--- a/template/yylmacro/home/7.其它/spacecp_privacy.htm
+++ b/template/yylmacro/home/7.其它/spacecp_privacy.htm
@@ -1,9 +1,12 @@
 <!--{template common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/setting/setting.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/user/other/privacy.css" type="text/css" />
 <header class="i-header">
 	<a class="i-header-back" href="./home.php"><i></i></a>
 	<div class="i-header-title">隐私设置</div>
+	<div class="i-header-menu">
+		<a class="u-all" id="i-header-panel-tg" href="javascript:;"><span>更多</span></a>
+	</div>
 </header>
 <div class="user-container">
 	<div class="wp">
@@ -308,6 +311,5 @@
 		</div>
 	</div>
 </div>
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/setting.min.js"></script>
+<!--{subtemplate home/ifooter_profile}-->
 <!--{template common/footer}-->
