--- a/css/user/other/email.less
+++ b/css/user/other/email.less
@@ -2,5 +2,11 @@
 @import url('../../global/var.less');			//常量
 @import url('../../global/color.less');		//配色
 
-@import url('email.less');
-@import url('privacy.less');
+.ua-responsive .screen-s{
+	form{
+		padding:10px;
+	}
+	.tfm caption{
+		.db;
+	}
+}
