--- a/template/yylmacro/home/3.资料/spacecp_avatar.htm
+++ b/template/yylmacro/home/3.资料/spacecp_avatar.htm
@@ -1,6 +1,5 @@
 <!--{template common/header_m}-->
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/profile/profile.css" type="text/css" />
+<!--{subtemplate home/iheader_profile}-->
 <div class="user-container">
 	<div class="wp">
 
@@ -70,6 +69,5 @@
 	
 	</div>
 </div>
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/profile.min.js"></script>
+<!--{subtemplate home/ifooter_profile}-->
 <!--{template common/footer}-->
