--- a/css/user/space/friend.less
+++ b/css/user/space/friend.less
@@ -6,7 +6,9 @@
 }
 .m-friend-search{
 	margin-right:0 !important;
-	float:none !important;
+	//float:none !important;
+	.w(222px) !important;
+	//.h(574px);
 }
 
 
@@ -16,7 +18,8 @@
 		padding:10px;
 	}
 	li{
-		.fl;
+		//.fl;
+		.dbi;.y(top);
 		.w(140px);
 		padding:10px;
 		margin-bottom:10px;
