--- a/template/yylmacro/home/5.空间/space_friend.htm
+++ b/template/yylmacro/home/5.空间/space_friend.htm
@@ -1,7 +1,7 @@
 <!--{if empty($diymode)}-->
 <!--{template common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/msg/friend.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/user/space/friend.css" type="text/css" />
 <header class="i-header">
 	<a class="i-header-back" href="./home.php"><i></i></a>
 	<div class="i-header-title">好友</div>
@@ -379,5 +379,4 @@
 	</div>
 </div>
 <script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/msg.min.js"></script>
 <!--{template common/footer}-->
