--- a/template/yylmacro/home/5.空间/space_friend.htm
+++ b/template/yylmacro/home/5.空间/space_friend.htm
@@ -2,10 +2,7 @@
 <!--{template common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/space/friend.css" type="text/css" />
-<header class="i-header">
-	<a class="i-header-back" href="./home.php"><i></i></a>
-	<div class="i-header-title">好友</div>
-</header>
+<!--{subtemplate home/iheader_space}-->
 <div class="user-container">
 	<div class="wp">
 		<div id="pt" class="bm cl">
