--- a/template/yylmacro/home/5.空间/spacecp_upload.htm
+++ b/template/yylmacro/home/5.空间/spacecp_upload.htm
@@ -511,11 +511,6 @@
 
 </div>
 
-
-
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/space.css" type="text/css" />
-
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
+<!--{subtemplate home/ifooter_space}-->
 
 <!--{template common/footer}-->
