--- a/css/user/space/follow.less
+++ b/css/user/space/follow.less
@@ -119,7 +119,7 @@
     	border-bottom:1px solid #ddd;
     	.w(auto);
     	.tns{.auto(x);}
-    	.none;
+    	//.none;
 	}
 
 	.flw_more{
@@ -129,5 +129,19 @@
 		background-color:@blue-bg;
 		margin-top:10px;
 	}
+
+}
+
+.ua-responsive .screen-s #uhd .flw_hd{
+	background: none;
+	border:none;
+	.pa;.lt(75px,36px);
+	margin-bottom:0;
+	.tns{
+		padding:5px 0;
+		th,td{padding:0 10px;}
+		p{.di;}
+	}
+	.mtm{.none;}
 
 }
