--- a/template/yylmacro/home/5.空间/follow_feed.htm
+++ b/template/yylmacro/home/5.空间/follow_feed.htm
@@ -1,9 +1,6 @@
 <!--{if $do == 'feed'}-->
-<!--{template common/header_m}-->
-<header class="i-header">
-	<a class="i-header-back" href="./home.php"><i></i></a>
-	<div class="i-header-title">关注</div>
-</header>
+	<!--{template common/header_m}-->
+	<!--{subtemplate home/iheader_space}-->
 	<div class="user-container">
 		<div class="wp">
 
@@ -48,10 +45,7 @@
 				<div class="bm_c">
 	<!--{else}-->
 		<!--{template common/header_m}-->
-		<header class="i-header">
-			<a class="i-header-back" href="./home.php"><i></i></a>
-			<div class="i-header-title">广播</div>
-		</header>
+		<!--{subtemplate home/iheader_space}-->
 		<div class="wp">
 			<div id="pt" class="bm cl">
 				<div class="z">
@@ -770,9 +764,5 @@
 		</div>
 	</div>
 </div>
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/space.css" type="text/css" />
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/space.min.js"></script>
-
+<!--{subtemplate home/ifooter_space}-->
 <!--{template common/footer}-->
