--- a/template/yylmacro/home/5.空间/space_blog_list.htm
+++ b/template/yylmacro/home/5.空间/space_blog_list.htm
@@ -16,10 +16,7 @@
 				<div class="bm_c">
 	<!--{else}-->
 		<!--{template common/header_m}-->
-		<header class="i-header">
-			<a class="i-header-back" href="./home.php"><i></i></a>
-			<div class="i-header-title">日志</div>
-		</header>
+		<!--{subtemplate home/iheader_space}-->
 		<div class="wp">
 			<div id="pt" class="bm cl">
 				<div class="z">
@@ -43,13 +40,7 @@
 	<!--{/if}-->
 <!--{else}-->
 	<!--{template common/header_m}-->
-	<header class="i-header">
-		<a class="i-header-back" href="./home.php"><i></i></a>
-		<div class="i-header-title">日志</div>
-		<div class="i-header-menu">
-			<a class="u-pub" href="home.php?mod=spacecp&ac=blog"><i></i><span>发表</span></a>
-		</div>
-	</header>
+	<!--{subtemplate home/iheader_space}-->
 	<div class="user-container">
 		<div class="wp">
 
@@ -231,9 +222,5 @@
 		</div>
 	</div>
 </div>
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/space.css" type="text/css" />
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/space.min.js"></script>
-
+<!--{subtemplate home/ifooter_space}-->
 <!--{template common/footer}-->
