--- a/template/yylmacro/home/5.空间/space_blog_view.htm
+++ b/template/yylmacro/home/5.空间/space_blog_view.htm
@@ -17,10 +17,7 @@
 			<div class="bm_c">
 <!--{else}-->
 	<!--{template common/header_m}-->
-	<header class="i-header">
-			<a class="i-header-back" href="./home.php"><i></i></a>
-			<div class="i-header-title">日志</div>
-		</header>
+	<!--{subtemplate home/iheader_space}-->
 	<div class="wp">
 		<div id="pt" class="bm cl">
 			<div class="z">
@@ -323,9 +320,6 @@
 	<script type="text/javascript">saveUserdata('home', '')</script>
 <!--{/if}-->
 
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/space.css" type="text/css" />
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/space.min.js"></script>
+<!--{subtemplate home/ifooter_space}-->
 
 <!--{template common/footer}-->
