--- a/template/yylmacro/home/5.空间/space_doing.htm
+++ b/template/yylmacro/home/5.空间/space_doing.htm
@@ -10,10 +10,7 @@
 				<div class="bm_c">
 	<!--{else}-->
 		<!--{template common/header_m}-->
-		<header class="i-header">
-			<a class="i-header-back" href="./home.php"><i></i></a>
-			<div class="i-header-title">记录</div>
-		</header>
+		<!--{subtemplate home/iheader_space}-->
 		<div class="wp">
 			<div id="pt" class="bm cl">
 				<div class="z">
@@ -38,10 +35,7 @@
 	<!--{if $space[self] && helper_access::check_module('doing')}--><!--{template home/space_doing_form}--><!--{/if}-->
 <!--{else}-->
 	<!--{template common/header_m}-->
-	<header class="i-header">
-		<a class="i-header-back" href="./home.php"><i></i></a>
-		<div class="i-header-title">记录</div>
-	</header>
+	<!--{subtemplate home/iheader_space}-->
 	<div class="user-container">
 		<div class="wp">
 
@@ -155,8 +149,6 @@
 		</div>
 	</div>
 </div>
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/space.css" type="text/css" />
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/space.min.js"></script>
+<!--{subtemplate home/ifooter_space}-->
+
 <!--{template common/footer}-->
