--- a/template/yylmacro/home/5.空间/space_wall.htm
+++ b/template/yylmacro/home/5.空间/space_wall.htm
@@ -12,10 +12,7 @@
 			<div class="bm_c">
 <!--{else}-->
 	<!--{template common/header_m}-->
-	<header class="i-header">
-		<a class="i-header-back" href="./home.php"><i></i></a>
-		<div class="i-header-title">留言板</div>
-	</header>
+	<!--{subtemplate home/iheader_space}-->
 	<div class="wp">
 		<div id="pt" class="bm cl">
 			<div class="z">
@@ -116,8 +113,6 @@
 	</div>
 <!--{/if}-->
 
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://css.jx3pve.com/css/user/space.css" type="text/css" />
-<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-<script src="http://js.jx3pve.com/js/user/space.min.js"></script>
+<!--{subtemplate home/ifooter_space}-->
+
 <!--{template common/footer}-->
