--- a/template/yylmacro/home/5.空间/spacecp_blog.htm
+++ b/template/yylmacro/home/5.空间/spacecp_blog.htm
@@ -59,10 +59,7 @@
 		</p>
 	</form>
 <!--{else}-->
-	<header class="i-header">
-		<a class="i-header-back" href="./home.php"><i></i></a>
-		<div class="i-header-title">日志</div>
-	</header>
+	<!--{subtemplate home/iheader_space}-->
 	<div class="wp">
 		<div id="pt" class="bm cl">
 			<div class="z">
@@ -284,9 +281,7 @@
 		$('subject').focus();
 	}
 	</script>
-	<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-	<link rel="stylesheet" href="http://css.jx3pve.com/css/user/space.css" type="text/css" />
-	<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
-	<script src="http://js.jx3pve.com/js/user/space.min.js"></script>
+	<!--{subtemplate home/ifooter_space}-->
+	
 <!--{/if}-->
 <!--{template common/footer}-->
