--- a/css/pvx/face/list.less
+++ b/css/pvx/face/list.less
@@ -108,6 +108,12 @@
 	.auto(x);
 	border-bottom:1px dashed #ddd;
 	padding-bottom:20px;
+
+	.w(auto);
+
+	.info .down{
+		.w(90px);
+	}
 }
 
 .w-listfilter-list .u-sort{.none;}
