个人中心-消息移动端样式修订

--- a/css/user/member/member.less
+++ b/css/user/member/member.less
@@ -40,6 +40,12 @@
 		margin-top:20px;
 	}
 	.pr;
+	.rfm .px{
+		width:200px !important;
+	}
+	.p_fre{
+
+	}
 	.rfm{
 		.w(auto);
 		border-bottom:none;
