--- a/css/user/other/privacy.css
+++ b/css/user/other/privacy.css
@@ -1,1 +1,1 @@
-.ua-responsive .screen-s .mn{padding:10px}.ua-responsive .screen-s .mn .tfm .pt,.ua-responsive .screen-s .mn .tfm .px{width:100%;box-sizing:border-box;padding:5px 10px;height:30px;margin-bottom:5px}
+.ua-responsive .screen-s .mn .tfm .pt,.ua-responsive .screen-s .mn .tfm .px{width:100%;box-sizing:border-box;padding:5px 10px;height:30px;margin-bottom:5px}.ua-responsive .screen-s .mn .tfm caption{display:block}.ua-responsive .screen-s .mn .tbmu,.ua-responsive .screen-s .mn .tfm caption{font-size:13px;line-height:1.8}.ua-responsive .screen-s .mn form{padding:10px}
