--- a/css/user/other/privacy.less
+++ b/css/user/other/privacy.less
@@ -3,7 +3,6 @@
 @import url('../../global/color.less');		//配色
 
 .ua-responsive .screen-s .mn{
-	padding:10px;
 
 	.tfm .pt, .tfm .px{
 		width:100%;
@@ -11,5 +10,16 @@
 		padding:5px 10px;
 		height:30px;
 		margin-bottom:5px;
+	}
+
+	.tfm caption{
+		.db;
+	}
+	.tbmu,.tfm caption{
+		.fz(13px,1.8);
+	}
+
+	form{
+		padding:10px;
 	}
 }
