--- a/css/user/msg/msg.less
+++ b/css/user/msg/msg.less
@@ -6,35 +6,115 @@
 .m-msg-nav{
 	.pr;
 }
-
 .user-msg-sendbutton{
 	&:extend(.u-btn-blue);
 	padding:0 10px;
 	.pa;.rt(0,-2px);
 	.lh(28px);
 }
+.ua-responsive .screen-s{
+	.m-msg-nav{.none;}
+	.user-msg-sendbutton{.none;}
+}
 
-.pm_op_r{padding-right:0;}
+.m-msg-list{}
+
+.ua-responsive .screen-s .m-msg-list{
+	padding:0 10px;
+}
+
+.pm_o{
+	.fz(13px,2);color:#888;
+	.o{
+		.db;.fl;padding-left:22px;padding-right:5px;
+		background:url('@{url}user/settings.svg') no-repeat 4px 4px;
+		background-size:auto 60%;
+	}
+}
+
+.m-msg-list-item{
+
+	.m-msg-list-item-check{
+		.fr;
+		*{.pointer;}
+	}
+
+	.pm_c{
+	}
+
+	.pm_o{
+		.db;
+		.xg1.z{
+			margin-right:5px;
+		}
+	}
+}
+
+.ua-responsive .screen-s{
+	.m-msg-list-item .pm_o{
+		float:none;
+	}
+
+	#pm_ul .pm_o{
+		float:right;
+	}
+}
+
+//发送消息页面
+.pmform #showSelectBox{
+	.none;
+}
+
+
+
+/*.pm_op_r{padding-right:0;}
 .pm_op_r .xw1{font-weight:normal;}
-//.pm_c .o{.fr;margin-left:5px;}
 .pml .hover{background-color:#f9f9f9;}
-#showSelectBox{.none;}
+#showSelectBox{.none;}*/
 
 .ua-responsive .screen-s {
+
+	//pm
+	.nts{
+		padding:0 10px;
+	}
+
+	//短消息总数导出
+	.pm_op_r{
+		padding-left:5px;
+		.xw1 a{.none;}
+	}
+
+	//短消息设置
+	.tfm th{
+		.w(auto);
+	}
+	#pmsettingform{
+		padding:0 10px;
+	}
+
+	//发送短消息
 	.tedt .pt{
 		.w(100%);
 	}
-	.user-msg-sendbutton{.none;}
+	.m-sendpm{
+		padding:0 10px;
+	}
+	.pmform .tedt{
+		.w(auto);
+	}
+	.pmform .un_selector input{
+		.w(auto);
+	}
+
+
+	
+
+	/*
 
 	.pm_c{
 		padding-left:0;
-		.xg1{.db;}
-	}
-	.pm_o .o{
-		.fz(13px,2);color:#888;
-		.db;padding-left:22px;padding-right:5px;
-		background:url('@{url}user/settings.svg') no-repeat 4px center;
-		background-size:auto 60%;
+		.pr;
 	}
 	.pml{
 		padding:5px 10px;
@@ -57,10 +137,13 @@
 		.table(block);
 		padding:0 10px;
 	}
-	.subtb{
-		background-color:#fafafa;
+	
+
+	.tb .y{
+		.none;
 	}
-	.nts{
-		padding:0 10px;
-	}
+
+	*/
 }
+
+
