--- a/template/yylmacro/home/1.消息/space_pm.htm
+++ b/template/yylmacro/home/1.消息/space_pm.htm
@@ -177,7 +177,7 @@
 											</script>
 										<!--/div/div-->
 								<!--{elseif $list && !$daterange}-->
-									<div id="pm_ul" class="xld xlda mbm pml">
+									<div id="pm_ul" class="xld xlda mbm pml m-msg-list">
 										<!--{loop $list $key $value}-->
 											<!--{subtemplate home/space_pm_node}-->
 										<!--{/loop}-->
@@ -289,8 +289,8 @@
 
 								<!--{if ($touid || $plid) && $list}-->
 									<!--{if empty($lastanchor)}--><a name="last"></a><!--{/if}-->
-									<div id="pm_ul_post" class="xld xlda pml">
-										<dl class="cl">
+									<div id="pm_ul_post" class="xld xlda pml m-msg-list">
+										<dl class="cl m-msg-list-item">
 											<dd class="m avt">
 												<a href="home.php?mod=space&uid=$space[uid]"><!--{avatar($space[uid],small)}--></a>
 											</dd>
@@ -326,8 +326,8 @@
 
 							<!--{elseif $_GET['subop'] == 'viewg'}-->
 								<!--{if $grouppm}-->
-									<div id="pm_ul" class="xld xlda pml mbm">
-										<dl class="bbda cl">
+									<div id="pm_ul" class="m-msg-list xld xlda pml mbm">
+										<dl class="bbda cl m-msg-list-item">
 											<dd class="y mtm pm_o">
 												<a href="javascript:;" id="pm_o_$grouppm[id]" class="o" onmouseover="showMenu({'ctrlid':this.id, 'pos':'34'})">{lang menu}</a>
 												<div id="pm_o_$grouppm[id]_menu" class="p_pop" style="display: none;">
@@ -394,18 +394,10 @@
 
 								<!--{if $count || $grouppms}-->
 									<form id="deletepmform" action="home.php?mod=spacecp&ac=pm&op=delete&folder=$folder" method="post" autocomplete="off" name="deletepmform">
-										<div class="xld xlda pml mtm mbm">
+										<div class="xld xlda pml mtm mbm m-msg-list">
 											<!--{if $grouppms}-->
 												<!--{loop $grouppms $grouppm}-->
-													<dl id="gpmlist_$grouppm[id]" class="bbda cur1 cl{if !$gpmstatus[$grouppm[id]]} newpm{/if}">
-														<dd class="y mtm pm_o">
-															<a href="javascript:;" id="pm_o_$grouppm[id]" class="o" onmouseover="showMenu({'ctrlid':this.id, 'pos':'34'})">{lang menu}</a>
-															<div id="pm_o_$grouppm[id]_menu" class="p_pop" style="display: none;">
-																<ul>
-																	<li><a href="javascript:;" onclick="ajaxget('home.php?mod=spacecp&ac=pm&op=delete&deletesubmit=1&deletepm_gpmid[]=$grouppm[id]', '', 'ajaxwaitid', '', 'none', '$(\'gpmlist_$grouppm[id]\').style.display=\'none\';');">{lang delete}</a></li>
-																</ul>
-															</div>
-														</dd>
+													<dl id="gpmlist_$grouppm[id]" class="m-msg-list-item bbda cur1 cl{if !$gpmstatus[$grouppm[id]]} newpm{/if}">
 														<dd class="m avt">
 															<div class="newpm_avt" title="{lang new_pm}"></div>
 															<a href="home.php?mod=space&do=pm&subop=viewg&pmid=$grouppm[id]">
@@ -417,21 +409,30 @@
 															</a>
 														</dd>
 														<dd class="ptm pm_c">
-															<div class="o">
+															<div class="o m-msg-list-item-check">
 																<input type="checkbox" name="deletepm_gpmid[]" id="a_deleteg_$grouppm[id]" class="pc" value="$grouppm[id]" />
 															</div>
 															<!--{if $grouppm[author]}-->
 																<a href="home.php?mod=space&uid=$grouppm[authorid]" target="_blank">$grouppm[author]</a> {lang say} :
 															<!--{/if}-->
 															<span id="p_gpmid_$grouppm[id]">$grouppm[message]</span> &nbsp; 
-															<span class="xg1"><!--{date($grouppm[dateline], 'u')}--></span>&nbsp; 
 															<a href="home.php?mod=space&do=pm&subop=viewg&pmid=$grouppm[id]" id="gpmlist_$grouppm[id]_a">{lang show}</a>
+															<br/>
+															<span class="xg1"><!--{date($grouppm[dateline], 'u')}--></span>
+															<span class="y pm_o">
+																<a href="javascript:;" id="pm_o_$grouppm[id]" class="o" onmouseover="showMenu({'ctrlid':this.id, 'pos':'34'})">{lang menu}</a>
+																<div id="pm_o_$grouppm[id]_menu" class="p_pop" style="display: none;">
+																	<ul>
+																		<li><a href="javascript:;" onclick="ajaxget('home.php?mod=spacecp&ac=pm&op=delete&deletesubmit=1&deletepm_gpmid[]=$grouppm[id]', '', 'ajaxwaitid', '', 'none', '$(\'gpmlist_$grouppm[id]\').style.display=\'none\';');">{lang delete}</a></li>
+																	</ul>
+																</div>
+															</span>
 														</dd>
 													</dl>
 												<!--{/loop}-->
 											<!--{/if}-->
 											<!--{loop $list $key $value}-->
-												<dl id="pmlist_$value[plid]" class="bbda cur1 cl{if $value[isnew]} newpm{/if}">									
+												<dl id="pmlist_$value[plid]" class="bbda cur1 cl{if $value[isnew]} newpm{/if} m-msg-list-item">									
 													<dd class="m avt">
 														<div class="newpm_avt" title="{lang new_pm}"></div>
 														<!--{if $value['pmtype'] == 1}-->
@@ -441,7 +442,7 @@
 														<!--{/if}-->
 													</dd>
 													<dd class="ptm pm_c">
-														<div class="o">
+														<div class="o m-msg-list-item-check">
 															<!--{if $value['pmtype'] == 1}-->
 																<input type="checkbox" name="deletepm_deluid[]" id="a_delete_$value[plid]" class="pc" value="$value[touid]" />
 															<!--{elseif $value['pmtype'] == 2}-->
