--- a/css/index/index-v7/content.less
+++ b/css/index/index-v7/content.less
@@ -44,18 +44,28 @@
 	}
 }
 
+.m-index-content-wrapper{
+	border: 1px solid #eee;
+	margin-bottom:12px;
+	.clearfix;
+	.r(4px);
+	background: #fcfcfc;
+}
+
 .m-index-zt{
-	margin-bottom:15px;
+	.fl;
+	.w(182px);
 	ul{
 		.clearfix;
-		background: #fafafa;
-		border: 1px solid #f0f0f0;
-		border-right:none;
-		.r(4px);
 	}
 	li{
-		.fl;.pr;
-		.w(25%);
+		//.fl;
+		.pr;
+		//.w(25%);
+		border-bottom:1px solid #eee;
+	}
+	.u-list-4{
+		border-bottom:none;
 	}
 	a{
 		.db;.h(38px);padding:15px 0;
@@ -66,7 +76,7 @@
 		}
 	}
 	span,em{.db;.x;.nobreak;}
-	span{.fz(14px,20px);.color(#444);margin-bottom:5px;}
+	span{.fz(13px,20px);.color(#444);margin-bottom:5px;}
 	em{.fz(12px,18px);.color(#777);}
 	i{
 		.pa;.rt(0,0);
@@ -74,6 +84,8 @@
 }
 
 .m-index-news{
+	margin-left:200px;
+	padding-right:20px;
 	h2{
 		.pr;
 		border-bottom:1px solid #eee;
@@ -135,10 +147,10 @@
 			color:#999;
 		}
 		a:hover{
-			color:@blue-link;
+			color:#c00;
 			//text-decoration:underline;
 			background-color:#f9f9f9;
-			em{color:@yel;}
+			em{color:#259;}
 			i{background-color:@basecolor;color:#fff;}
 		}
 	}
@@ -149,17 +161,17 @@
 }
 
 .c-compass{
-	padding-left:5px;
-	margin-bottom:12px;
+	//padding-left:5px;
 	ul{
 
 	}
 	li{
-		.size(80px);
+		.size(81px);
+		border-color:#eee;
 	}
 	i{
-		margin-top:10px;
-		.size(40px);
+		margin-top:15px;
+		//.size(40px);
 	}
 	span{
 		padding:0;
