--- a/css/index/index-v7/mobile.less
+++ b/css/index/index-v7/mobile.less
@@ -18,14 +18,22 @@
 		}
 	}
 
+	.m-index-content-wrapper{
+		background:none;
+	}
+
 	.m-index-zt{
+		background-color:#fcfcfc;
+		float:none;.w(auto);
 		ul{border-bottom:none;}
-		li{.w(50%);border-bottom:1px solid #eee;}
+		li{.w(50%);.fl;border-bottom:1px solid #eee;}
+		margin-bottom:12px;
 	}
 
 	.m-index-news{
 		margin-bottom:10px;
 		padding:0 10px;
+		margin-left:0;
 		h2 .u-title{
 			.none;
 			&.on{
