--- a/css/index/index-v7/sidebar.less
+++ b/css/index/index-v7/sidebar.less
@@ -101,7 +101,7 @@
 
 .m-index-wxcode{
 	.x;
-	background:#fafafa;
+	background:#fcfcfc;
 	padding:20px 0;
 	.u-img{.db;.auto(x);}
 	b{/*.color(@blue-link);*/.bold;}
