--- a/css/user/msg/msg.less
+++ b/css/user/msg/msg.less
@@ -107,6 +107,15 @@
 		.w(auto);
 	}
 
+	//翻页
+	.w-pages{
+		padding:0 5px;
+	}
+	.pgs{
+		padding:0 5px;
+		a{margin-bottom:5px;}
+	}
+
 
 	
 
@@ -119,9 +128,7 @@
 	.pml{
 		padding:5px 10px;
 	}
-	.w-pages{
-		padding:0 10px;
-	}
+	
 	.ntc_body .lit{
 		.color(@blue-link);
 	}
