--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -3,64 +3,42 @@
 <div class="index-container">
     <div class="wp">
         
-        <div id="pt" class="bm cl">
-            <div class="z">
-                <a href="./" class="nvhm" title="首页">剑网3PVE官方站（JX3PVE.COM）</a> 
-                <em>›</em> <a href="http://www.jx3pve.com">首页</a>
-            </div>
-            <div class="m-index-msg">
-                <!--{block/1815}-->
-            </div>
-        </div>
-
         <div class="index-content">
+            <div class="m-index-content-wrapper">
+                <div class="m-index-zt">
+                    <!--{block/1817}-->
+                </div>
 
-            <div class="m-index-slider">
-                <!--{block/1733}-->
-            </div>
-
-            <div class="m-index-zt">
-                <!--{block/1817}-->
+                <div class="m-index-news">
+                    <h2 class="m-index-title">
+                        <a class="u-title on" href="javascript:;"><i class="u-ico"></i>干货推荐<span class="u-divding"> | </span></a>
+                        <a class="u-title" href="javascript:;">PVE动态<span class="u-divding"> | </span></a>
+                        <a class="u-title" href="javascript:;">PVX动态<span class="u-divding"> | </span></a>
+                        <a class="u-title" href="javascript:;">江湖动态</a>
+                        <a class="u-add" href="./push"><i></i>推送</a>
+                    </h2>
+                    <div class="m-index-list on">
+                        <!--{block/1805}-->
+                    </div>
+                    <div class="m-index-list">
+                        <!--{block/1818}-->
+                    </div>
+                    <div class="m-index-list">
+                        <!--{block/1736}-->
+                    </div>
+                    <div class="m-index-list">
+                        <!--{block/1737}-->
+                    </div>
+                </div>
             </div>
 
             <!--{template jx3pve/c_compass}-->
-
-            <div class="m-index-news">
-                <h2 class="m-index-title">
-                    <a class="u-title on" href="javascript:;"><i class="u-ico"></i>干货推荐<span class="u-divding"> | </span></a>
-                    <a class="u-title" href="javascript:;">PVE动态<span class="u-divding"> | </span></a>
-                    <a class="u-title" href="javascript:;">PVX动态<span class="u-divding"> | </span></a>
-                    <a class="u-title" href="javascript:;">江湖动态</a>
-                    <a class="u-add" href="./push"><i></i>推送</a>
-                </h2>
-                <div class="m-index-list on">
-                    <!--{block/1805}-->
-                </div>
-                <div class="m-index-list">
-                    <!--{block/1818}-->
-                </div>
-                <div class="m-index-list">
-                    <!--{block/1736}-->
-                </div>
-                <div class="m-index-list">
-                    <!--{block/1737}-->
-                </div>
-            </div>
-
         </div>
 
         <div class="index-sidebar">
 
             <div class="m-index-os">
                 <!--{block/1819}-->
-            </div>
-
-            <div class="m-index-my">
-                <ul>
-                    <li><a href="./forum.php?mod=guide&view=my&type=thread" target="_blank"><i class="u-my"></i>我的帖子</a></li>
-                    <li><a href="./home.php?mod=space&do=favorite&view=me" target="_blank"><i class="u-fav"></i>我的收藏</a></li>
-                    <li><a href="./home.php?mod=follow" target="_blank"><i class="u-feed"></i>我的关注</a></li>
-                </ul>
             </div>
 
             <div class="m-index-ac">
@@ -82,8 +60,5 @@
     </div>
 </div>
 
-
-
-<script src="http://js.jx3pve.com/js/plugin/swiper2.min.js"></script>
 <script src="http://js.jx3pve.com/js/page/page-index.js"></script>
 <!--{template common/footer}-->
