--- a/template/tool/forum/sidebar.htm
+++ b/template/tool/forum/sidebar.htm
@@ -18,7 +18,7 @@
 	        <input type="text" name="searchoption[63][value]" size="15" class="u-text" value="" placeholder="输入皮肤名称">
 	        <button type="submit" class="u-button-search u-button" name="searchsortsubmit"><em>搜索</em></button>
 	    </form>
-	    <a class="getanew" href="./ask" target="_blank"><i></i>没找到想要的？试试来提需求。</a>
+	    <a class="getanew" href="./feedback" target="_blank"><i></i>没找到想要的？试试来提需求。</a>
 	</div>
 
 	<!-- jx3pve:教程 -->
