--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -40,6 +40,10 @@
             <i class="u-pvx"><img src="http://img.jx3pve.com/img/system/sitemap/pvx.png" alt="休闲攻略"></i>
             <span>休闲攻略</span><em></em>
         </a></li> -->
+        <!-- <li><a href="./music">
+            <i class="u-music"><img src="http://img.jx3pve.com/img/system/sitemap/music.png" alt="音乐"></i>
+            <span>音乐/视频</span><em></em>
+        </a></li> -->
         <li><a href="./team" >
             <i class="u-team"><img src="http://img.jx3pve.com/img/system/sitemap/team.png" alt="团队招募"></i>
             <span>招募</span><em></em>
@@ -60,10 +64,6 @@
             <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
             <span>配装</span><em></em>
         </a></li>
-        <li><a href="./app/servers">
-            <i class="u-servers"><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i>
-            <span>开服</span><em></em>
-        </a></li>
         <li><a href="https://www.j3pz.com/tools/haste/" target="_blank">
             <i class="u-speed"><img src="http://img.jx3pve.com/img/system/sitemap/speed.png" alt="加速计算"></i>
             <span>急速</span><em></em>
@@ -72,21 +72,25 @@
             <i class="u-chengjiu"><img src="http://img.jx3pve.com/img/system/sitemap/chengjiu.png" style="left:-5px;width:120%;top:-2px;" alt="成就百科"></i>
             <span>成就</span><em></em>
         </a></li>
+        <li><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank">
+            <i class="u-haiman"><img src="http://img.jx3pve.com/img/system/sitemap/haiman.png" alt="海鳗游戏数据"></i>
+            <span>游戏数据</span><em></em>
+        </a></li>
+        <li><a href="./app/servers">
+            <i class="u-servers"><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i>
+            <span>开服记录</span><em></em>
+        </a></li>
         <li><a href="./snow">
             <i class="u-snow"><img src="http://img.jx3pve.com/img/system/sitemap/snow.png" alt="小雪读条皮肤"></i>
-            <span>读条</span><em></em>
+            <span>读条皮肤</span><em></em>
         </a></li>
         <li><a href="./story">
             <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="回忆录"></i>
             <span>回忆录</span><em></em>
         </a></li>
-        <!-- <li><a href="./music">
-            <i class="u-music"><img src="http://img.jx3pve.com/img/system/sitemap/music.png" alt="音乐"></i>
-            <span>音乐</span><em></em>
-        </a></li> -->
         <li><a href="./ow">
             <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
-            <span>开车</span><em></em>
+            <span>老司机</span><em></em>
         </a></li>
         <li class="u-more"><a href="./sitemap">
             <i class="u-sitemap"><img src="http://img.jx3pve.com/img/system/sitemap/more.png" alt="更多"></i>
