Signed-off-by: unknown <17229398@qq.com>

--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -74,7 +74,7 @@
         </a></li>
         <li><a href="http://jx3.hightman.cn/weixin/data.php?q=" target="_blank">
             <i class="u-haiman"><img src="http://img.jx3pve.com/img/system/sitemap/haiman.png" alt="海鳗游戏数据"></i>
-            <span>游戏数据</span><em></em>
+            <span>游戏数据</span><em class="i-mark-new"></em>
         </a></li>
         <li><a href="./app/servers">
             <i class="u-servers"><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i>
