--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -53,7 +53,7 @@
 
             <div class="m-index-wxcode">
                 <span class="u-img"><img src="http://img.jx3pve.com/img/header/wx_172.jpg" alt="剑网3PVE微信公众号"></span>
-                <p>扫一扫关注微信公众号<br><b>JX3PVE网站</b></p>
+                <p>扫一扫关注微信公众号</p>
             </div>
 
         </div>
