关闭修改用户名功能

--- a/template/yylmacro/home/0.首页/os_content.htm
+++ b/template/yylmacro/home/0.首页/os_content.htm
@@ -3,7 +3,7 @@
 	<div class="user-os-nav">
 		<ul>
 			<li><a href="./home.php?mod=spacecp&ac=profile&op=password">修改密码</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=plugin&op=profile&id=k_gaiming:k_gaiming">修改用户名</a></li>
+			<!-- <li><a href="./home.php?mod=spacecp&ac=plugin&op=profile&id=k_gaiming:k_gaiming">修改用户名</a></li> -->
 			<li><a href="./home.php?mod=spacecp&ac=profile">完善资料</a></li>
 			<li><a href="./home.php?mod=spacecp&ac=profile&op=verify">申请认证</a></li>
 			<li><a href="./home.php?mod=spacecp&ac=plugin&id=qqconnect:spacecp">绑定QQ</a></li>
