增加奇穴展示

--- a/template/macro/tpl/view.hbs
+++ b/template/macro/tpl/view.hbs
@@ -20,10 +20,11 @@
 					</span>
 				</li>
 			</ul>
+			<div class="m-banner-macro"><a href="http://www.jx3pve.com/feedback" target="_blank"><img src="http://img.jx3pve.com/img/banner/adbanner1.png" /><span><b>广告</b>广告位招租 admin@jx3pve.com</span></a></div>
 		</div>
 		<div class="m-macro-relative">
 			<ul>
-				<li class="u-down"><i></i>下载配套工具</li>
+				<li><a class="u-down" href="{macro_tool_value}"><i></i>下载配套工具</a></li>
 				<li><a class="u-report" href="javascript:;" onclick="showWindow('miscreport', 'misc.php?mod=report&amp;url='+REPORTURL);return false;"><i></i>举报失效</a></li>
 			</ul>
 		</div>
@@ -38,7 +39,7 @@
 
 	<div class="m-macro-block m-macro-roleinfo">
 		<div class="til"><h3>奇穴方案</h3></div>
-		<div class="content">
+		<div class="content e-jx3qixue">
 			{macro_qx_value}
 		</div>
 	</div>
