--- a/css/index/common.less
+++ b/css/index/common.less
@@ -11,6 +11,7 @@
 @import url('../module/ui/ui.less');				//元件
 @import url('../module/widget/widget.less');		//组件
 @import url('../module/forum/forum.less');			//论坛版块
+@import url('../module/plugin/plugin.less');		//开发的插件
 
 @import url('../plugin/macro-sytax.less');	
 
